# wxauto-restful-api

./: .gitignore  CONFIG_OPTIMIZATION.md  DEPLOYMENT.md  README.md  check_config.bat  check_config.py  config.yaml  deploy.bat  deploy.ps1  install_service.bat  pyproject.toml  quick_start.bat  run.py  schemas.json  setup.bat  test_config.bat  test_config.py  uninstall_service.bat  wxauto_ai_customer_service_workflow.md
app/: main.py
app/api/v1/: apps.py  chat.py  files.py  info.py  wechat.py
app/database/: factory.py  sqlite.py
app/models/: base.py  file.py  response.py
app/models/request/: apps.py  chat.py  wechat.py
app/services/: app_service.py  chat_service.py  file_service.py  init.py  wechat_service.py
app/services/applications/: __init__.py  acceptnewfriend.py
app/utils/: auth.py  config.py  logger.py  route_condition.py  settings.py  wx_package_manager.py
static/swagger-ui/: swagger-ui-standalone-preset.js
